--- a/.github/workflows/sast.yml
+++ b/.github/workflows/sast.yml
@@ -9,7 +9,7 @@ jobs:
  id: vars
  shell: bash
  run: |
- echo "##[set-output name=branch;]$(echo
+ echo "##[set-output name=branch;]$(echo \
 ${GITHUB_REF#refs/heads/})"
  echo "::set-output name=sha_short::$(git rev-parse HEAD)"
  - name: Prepare Mixeway docker image
